--- a/app/src/assets/scss/mixins/_typo.scss
+++ b/app/src/assets/scss/mixins/_typo.scss
@@ -71,7 +71,7 @@ $lineHeightArray2: $textSize * 1.6 $textSize * 1.3 $textSize * 1.2 $textSize *
     }
 }
 
-$main-font-style: Verdana, sans-serif;
+$main-font-style: 'wall-regular', Verdana, sans-serif;
 
 @mixin t-main-20() {
     font-family: $main-font-style;
