--- a/app/src/assets/scss/layout.scss
+++ b/app/src/assets/scss/layout.scss
@@ -1,21 +1,50 @@
 .layout{
+    position: relative;
     display: block;
     overflow: hidden;
     width: 100%;
-    
-    &__inner{
-        display: flex;
-        width: 200%;
-        flex-wrap: nowrap;
+    height: 100vh;
+    background: $colorBack;
+
+    &__header{
+        position: fixed;
+        z-index: 2;
+        top: 20px;
+        left: 20px;
     }
+
+    &__main{
+        position: relative;
+        z-index: 1;
+        display: block;
+        overflow: hidden;
+        width: 100%;
+        height: 100vh;
+    }
+    
+    
     &__left{
-        width: 50%;
-        min-height: 100vh;
-        background: grey;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: blue;
     }
     &__right{
-        width: 50%;
-        min-height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 100%;
+        width: 100%;
+        height: 100vh;
         background: green;
+    }
+    &__top{
+        position: absolute;
+        bottom: 0;
+        left: 100%;
+        width: 100%;
+        height: 100vh;
+        background: red;
     }
 }
