--- a/app/src/assets/scss/commons.scss
+++ b/app/src/assets/scss/commons.scss
@@ -1,3 +1,10 @@
 .btn{
     color: blue;
 }
+
+.logo{
+    display: block;
+    width: 30px;
+    height: 30px;
+    @include background-image(logo);
+}
