--- a/app/www/partials/_header.html
+++ b/app/www/partials/_header.html
@@ -1,1 +1,5 @@
-<header class="layout__header">I am header</header>
+<header class="layout__header">
+    <a class="layout__header-link" href="">
+        <div class="logo"></div>
+    </a>
+</header>
