--- a/app/src/assets/scss/layout.scss
+++ b/app/src/assets/scss/layout.scss
@@ -12,6 +12,21 @@
         top: 20px;
         left: 20px;
     }
+    
+    &__header-link{
+        position: relative;
+        display: block;
+        color: white;
+        text-decoration: none;
+        &:hover{
+            text-decoration: underline;
+        }
+    }
+
+    &__title{
+        display: block;
+        color: white;
+    }
 
     &__main{
         position: relative;
