feat: router init

--- a/app/www/partials/_header.html
+++ b/app/www/partials/_header.html
@@ -1,5 +1,5 @@
 <header class="layout__header">
-    <a class="layout__header-link" href="">
+    <a class="layout__header-link" href="/">
         <div class="logo"></div>
     </a>
     <h1 class="layout__title m-level-3">Front-end web developer</h1>
