feat: layouts style

--- a/app/www/partials/_footer.html
+++ b/app/www/partials/_footer.html
@@ -1,1 +1,1 @@
-<footer class="layout__footer">I am footer</footer>
+<footer class="layout__footer">This website use cookie. Close it quickly if this is a problem.</footer>
