--- a/app/src/assets/scss/commons.scss
+++ b/app/src/assets/scss/commons.scss
@@ -19,7 +19,25 @@
         }
     }
 }
-.page-about{
+.page{
     padding:260px 20px 0px;
     color: white;
+    h2{
+        padding-bottom: 10px;
+        &:last-child{
+            padding-bottom: 0;
+        }
+    }
+    p{
+        padding-bottom: 10px;
+        &:last-child{
+            padding-bottom: 0;
+        }
+    }
+    a{
+        color: white;
+        &:hover{
+            text-decoration: none;
+        }
+    }
 }
